<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckHospital">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/backbtn"
            android:contentDescription="backbtn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="Hospitals"
            style="@style/textstyleOne" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.96"
        tools:layout_editor_absoluteX="0dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="160dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/nilai"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/pt_13717_jalan_bbn_2_1_n_bandar_baru_nilai_n_71800_nilai_negeri_sembilan"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="160dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/cyberjaya"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/persiaran_cyber_point_n_selatan_cyber_8_63000_cyberjaya_selangor"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="160dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/putrajaya"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/jalan_p9_presint_7_n_62250_putrajaya_wilayah_persekutuan_putrajaya"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="160dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/kuala_lumpur"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/jalan_pahang_50586_kuala_lumpur_wilayah_persekutuan_kuala_lumpur"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="160dp"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/damansara"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/lot_2_jalan_lapangan_terbang_subang_seksyen_u2_40150_shah_alam_selangor"
                        style="@style/textstyleOne"
                        android:textColor="@color/white"/>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>